2005-04-23  Jim Evins  <evins@snaught.com>

	* src/util.c: (gl_util_combo_box_set_strings):
		Make sure to clear model before loading a new list of strings.
	* src/wdgt-media-select.h:
	* src/wdgt-media-select.c: (gl_wdgt_media_select_instance_init),
	(gl_wdgt_media_select_construct), (page_size_combo_changed_cb),
	(template_combo_changed_cb), (prefs_changed_cb),
	(gl_wdgt_media_select_get_name), (gl_wdgt_media_select_set_name),
	(gl_wdgt_media_select_get_page_size),
	(gl_wdgt_media_select_set_page_size):
		Replaced the deprecated	GtkCombo widget with the new
		GtkComboBox.

2005-04-21  Jim Evins  <evins@snaught.com>

	* data/glade/template-designer.glade:
	* src/template-designer.c: (construct_pg_size_page),
	(pg_size_page_changed_cb), (build_template):
		Replaced the deprecated	GtkCombo widget with the new
		GtkComboBox.

2005-04-20  Jim Evins  <evins@snaught.com>

	* data/glade/prefs-dialog.glade:
	* src/prefs-dialog.c: (construct_object_page),
	(update_object_page_from_prefs), (update_prefs_from_object_page):
		Replaced the deprecated	GtkCombo widget with the new
		GtkComboBox.
	
2005-04-19  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
	* src/object-editor-bc-page.c: (gl_object_editor_prepare_bc_page),
	(style_changed_cb), (gl_object_editor_set_bc_style),
	(gl_object_editor_get_bc_style), (gl_object_editor_set_bc_color),
	(gl_object_editor_get_bc_color):
	* src/object-editor-data-page.c:
	(gl_object_editor_prepare_data_page), (gl_object_editor_set_data),
	(gl_object_editor_get_data):
	* src/object-editor-edit-page.c:
	(gl_object_editor_prepare_edit_page), (insert_button_cb):
	* src/object-editor-fill-page.c:
	(gl_object_editor_prepare_fill_page),
	(gl_object_editor_set_fill_color),
	(gl_object_editor_get_fill_color):
	* src/object-editor-image-page.c:
	(gl_object_editor_prepare_image_page),
	(gl_object_editor_set_image), (gl_object_editor_get_image):
	* src/object-editor-line-page.c:
	(gl_object_editor_prepare_line_page),