@@ -151,5 +151,6 @@ particular products (I apologize if I have missed anybody):
 	Dan Clark
 	Peter L. Berghold
 	Vitaly Lipatov
+	Steve Saxon
 
 And many others for their many helpful suggestions and bug reports -- thanks.
